--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react-dom": "^16.9.9",
     "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-router-dom": "^5.1.6",
+    "axios": "^0.21.0",
+    "firebase": "^8.1.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
